[gd_scene load_steps=2 format=3 uid="uid://dtn3am85byhpe"]

[ext_resource type="Script" uid="uid://cvtg11wkgibtw" path="res://UI/resource-display/resourse_box.gd" id="1_8jmiw"]

[node name="ResourseBox" type="VBoxContainer"]
offset_bottom = 12.0
script = ExtResource("1_8jmiw")

[node name="ResourseSlot" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ResourseSlot"]
layout_mode = 2
expand_mode = 3

[node name="Label" type="Label" parent="ResourseSlot"]
layout_mode = 2

[node name="ResourseSlot2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ResourseSlot2"]
layout_mode = 2
expand_mode = 3

[node name="Label" type="Label" parent="ResourseSlot2"]
layout_mode = 2

[node name="ResourseSlot3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ResourseSlot3"]
layout_mode = 2
expand_mode = 3

[node name="Label" type="Label" parent="ResourseSlot3"]
layout_mode = 2

[node name="ResourseSlot4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ResourseSlot4"]
layout_mode = 2
expand_mode = 3

[node name="Label" type="Label" parent="ResourseSlot4"]
layout_mode = 2
